// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages EditProcess.vue it can create a new process renders 1`] = `
<div>
  <h2 class="process-edit__title"><button type="button" class="el-button el-button--text">
      <!----><i class="el-icon-arrow-left"></i><span>process.edit.back</span></button> <span>process.add.title</span></h2>
  <elrow-stub tag="div" gutter="20" justify="start" align="top">
    <elcol-stub span="24" tag="div">
      <div id="modeler"></div>
    </elcol-stub>
    <elcol-stub span="6" tag="div">
      <processinfoform-stub process="[object Object]"></processinfoform-stub>
    </elcol-stub>
  </elrow-stub>
  <elrow-stub tag="div" type="flex" justify="center" align="top">
    <elcol-stub span="6" tag="div"><button type="button" class="el-button el-button--success">
        <!---->
        <!----><span>process.edit.save</span></button>
      <!---->
    </elcol-stub>
  </elrow-stub>
</div>
`;

exports[`Pages EditProcess.vue renders 1`] = `
<div>
  <h2 class="process-edit__title"><button type="button" class="el-button el-button--text">
      <!----><i class="el-icon-arrow-left"></i><span>process.edit.back</span></button> <span>process.edit.title</span></h2>
  <elrow-stub tag="div" gutter="20" justify="start" align="top">
    <elcol-stub span="24" tag="div">
      <div id="modeler"></div>
    </elcol-stub>
    <elcol-stub span="6" tag="div">
      <processinfoform-stub process="[object Object]"></processinfoform-stub>
    </elcol-stub>
  </elrow-stub>
  <elrow-stub tag="div" type="flex" justify="center" align="top">
    <elcol-stub span="6" tag="div"><button type="button" class="el-button el-button--success">
        <!---->
        <!----><span>process.edit.save</span></button> <button type="button" class="el-button el-button--danger is-plain">
        <!---->
        <!----><span>process.edit.reset
      </span></button></elcol-stub>
  </elrow-stub>
</div>
`;
